--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "pixiframe",
 	"version": "0.1.0",
 	"private": true,
+	"license": "MIT",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
