--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.20.4",
 		"@types/bcrypt": "^5.0.0",
+		"@types/bcryptjs": "^2.4.2",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.15",
@@ -38,8 +39,9 @@
 	"dependencies": {
 		"@supabase/auth-helpers-sveltekit": "^0.10.2",
 		"@supabase/supabase-js": "^2.32.0",
-		"bcrypt": "^5.1.1",
-		"sharp": "^0.32.5",
+		"bcryptjs": "^2.4.3",
+		"crypto-browserify": "^3.12.0",
+		"jimp": "^0.22.10",
 		"theme-change": "^2.5.0"
 	}
 }
